objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Count_of_IA_Decline_Reasons__c</fullName>
        <description>Sum of IA Decline reasons</description>
        <formula>IF(INCLUDES(IA_Decline_Reason__c, 'Insufficient equity in the property'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Insufficient proceeds to meet needed payoffs'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'HB mortgage app was declined'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Poor Condition'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Hoarding'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Structural failure/cracks/water leaks'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'C5 rating'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Unacceptable foundation'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Ineligible property type'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'HOA Complications'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Sale Restricted Community'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Atypical Property'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Too high of HOA/month'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Illegal use of space'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Delinquency'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Lates on Subject Mortgage'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Credit Score Below Minimum'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Number of recent inquiries on credit bureau report'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Recent Bankruptcy'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Notice of default, foreclosure or repossession'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'No credit file'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'High DTI'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Insufficient income'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Would not share requested additional assets'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Would not share Requested Income Documents'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Income Calculated Incorrectly at Submission'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Temporary or irregular employment'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Unable to verify employment'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'I/O mortgage'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Private Mortgage'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Reverse mortgage'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Numerous judgements'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'LTV Exceeds Limit'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Undisclosed liens &amp; judgements'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Overvaluation'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Excessive Adjustments'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Price Confidence'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Ineligible property holding type - Leasehold'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Trust restrictions'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Client in the middle of legal proceedings'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Undisclosed owner of record'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Felony'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Would not share Full Trust'), 1, 0) +

IF(INCLUDES(IA_Decline_Reason__c, 'Fraud/Behavioral Risk'), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of IA Decline reasons</inlineHelpText>
        <label>Count of IA Decline Reasons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Requirements__c</fullName>
        <label>Count of Requirements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_Score__c</fullName>
        <description>A percentile rank (between 0-100) indicating the diversification benefit of this potential investment on a County level. A higher score correspond to higher diversification benefits. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <inlineHelpText>A percentile rank (between 0-100) indicating the diversification benefit of this potential investment on a County level. A higher score correspond to higher diversification benefits.</inlineHelpText>
        <label>County Diversification Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Create_Box_Folder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will manually create a Box folder for the Opportunity. It should only be used if an error occurs during the automatic creation.</inlineHelpText>
        <label>Create Box Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Authorization_Over_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Authorization Over Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Pre_Qualification_Status__c</fullName>
        <label>Credit Pre-Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>No Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Score_Equifax__c</fullName>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_Equifax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score Equifax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Experian__c</fullName>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_Experian__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score Experian</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Factor_Equifax__c</fullName>
        <description>Referenced in Adverse Action Letter when PS manually sends letter from Lead.</description>
        <label>Credit Score Factor - Equifax</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Factor_Experian__c</fullName>
        <description>Referenced in Adverse Action Letter when PS manually sends letter from Lead.</description>
        <label>Credit Score Factor - Experian</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Score_TransUnion__c</fullName>
        <formula>Personal_Credit_Report__r.LASERCA__Credit_Score_TransUnion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Score TransUnion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_was_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit was Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Estimated_Home_Value__c</fullName>
        <inlineHelpText>This is the Estimated Home Value stated from customer or Unison AVM</inlineHelpText>
        <label>Customer Estimated Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Transaction_Fee__c</fullName>
        <label>Customer Transaction Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMA_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used in DocGen to include the Deferred Maintenance Addendum if &gt; 0</description>
        <inlineHelpText>Total count of all DMA records</inlineHelpText>
        <label>DMA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Underwriting or Ops has determined DMA is required for the file.</description>
        <inlineHelpText>Underwriting or Ops has determined DMA is required for the file.</inlineHelpText>
        <label>DMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMA_Required_f_del__c</fullName>
        <formula>IF (  DMA_Count__c   &gt; 0, TRUE, FALSE)</formula>
        <inlineHelpText>Underwriting or Ops has determined DMA is required for the file.</inlineHelpText>
        <label>DMA Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Credit_Report__c</fullName>
        <formula>Personal_Credit_Report__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Credit Report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Stage_Change__c</fullName>
        <description>Time stamp of when opportunity was put into current stage
This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <label>Date of Stage Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Signed_Contract_Commission__c</fullName>
        <formula>TODAY() -  Contract_Signed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Today minus the contract signed date</inlineHelpText>
        <label>Days Since Signed Contract - Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Difficulty_Score__c</fullName>
        <description>A score from 0 to 100 indicating the difficulty of the Opportunity. Higher scores are associated with easier deals. This function assigns percentile value based on all available opportunities in the queue. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <label>Deal Difficulty Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_On_Hold_for_Ramp_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates a deal that is temporarily on hold prior to funding-based ramp-up. Updated to TRUE when Opportunity stage is changed to “On Hold”. Introduced in Q1’20 as a temporary measure, to be reviewed for deprecation no later than end of Q4 2021.</description>
        <inlineHelpText>Indicates a deal that is temporarily on hold prior to funding-based ramp-up.</inlineHelpText>
        <label>Deal On Hold for Ramp Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declaration_Adult_Name_and_Relationshi__c</fullName>
        <label>Declaration Adult Name and Relationshi</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Deliquency_Co__c</fullName>
        <label>Declaration Deliquency (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Deliquency__c</fullName>
        <label>Declaration Deliquency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Explanation_Co__c</fullName>
        <label>Declaration Explanation (Co)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Explanation__c</fullName>
        <label>Declaration Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Intent_of_Occupancy_Co__c</fullName>
        <label>Declaration Intent of Occupancy (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intent_of_Occupancy__c</fullName>
        <label>Declaration Intent of Occupancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Intent_of_Proceeds__c</fullName>
        <label>Declaration Intent of Proceeds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit_Co__c</fullName>
        <label>Declaration Lawsuit (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Lawsuit__c</fullName>
        <label>Declaration Lawsuit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments_Co__c</fullName>
        <label>Declaration Outstanding Judgments (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Outstanding_Judgments__c</fullName>
        <label>Declaration Outstanding Judgments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident_Co__c</fullName>
        <label>Declaration Permanent Resident (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Permanent_Resident__c</fullName>
        <label>Declaration Permanent Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Person_Name_and_Relationship__c</fullName>
        <label>Declaration Person Name and Relationship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney_Co__c</fullName>
        <label>Declaration Power of Attorney (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_Power_of_Attorney__c</fullName>
        <label>Declaration Power of Attorney</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_US_Citizen__c</fullName>
        <label>Declaration U.S. Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Declaration_U_S_Citizen_Co__c</fullName>
        <label>Declaration U.S. Citizen (Co)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_In_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decline In Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deferred_Maintenance_Date_Time__c</fullName>
        <label>Deferred Maintenance Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deferred_Maintenance__c</fullName>
        <label>Deferred Maintenance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delighted_Error__c</fullName>
        <label>Delighted Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delighted_Index__c</fullName>
        <label>Delighted Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Delighted_Post_Closing_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delighted Post Closing Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delighted_Send_Status__c</fullName>
        <formula>IF( 
    MOD(VALUE(Delighted_Index__c), 4)==0 &amp;&amp; ISPICKVAL(StageName, "CAP Sent")  &amp;&amp; RecordTypeId == "012E00000002OH1", true,
    IF(
        MOD(VALUE(Delighted_Index__c), 4)==1 &amp;&amp; ISPICKVAL(StageName, "Offer Package Sent")  &amp;&amp; RecordTypeId == "012E00000002OHB", true,
        IF( 
            MOD(VALUE(Delighted_Index__c), 4)==2 &amp;&amp; RSI_Sent__c &amp;&amp; RecordTypeId == "012E00000002OHB" , true, 
            IF( 
                MOD(VALUE(Delighted_Index__c), 4)==3 &amp;&amp; Estimated_Funding_Amount_Changed__c, true, 
                false
            )
        ) 
    )
)</formula>
        <label>Delighted Send Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delighted_Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delighted Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delighted_Trigger_Status2__c</fullName>
        <formula>IF(
   MOD(VALUE(Delighted_Index__c), 4)==0 &amp;&amp; ISPICKVAL(StageName, "CAP Sent")  &amp;&amp; RecordTypeId == "012E00000002OH1", "Offer Package Sent for HO",
   IF(
       MOD(VALUE(Delighted_Index__c), 4)==1 &amp;&amp; ISPICKVAL(StageName, "Offer Package Sent")  &amp;&amp; RecordTypeId == "012E00000002OHB", "CAP Sent for HB",
       IF(
           MOD(VALUE(Delighted_Index__c), 4)==2 &amp;&amp; RSI_Sent__c &amp;&amp; RecordTypeId == "012E00000002OHB" , "RS1 Letter Sent to HO",
           IF(
               MOD(VALUE(Delighted_Index__c), 4)==3 &amp;&amp; Estimated_Funding_Amount_Changed__c, "Funding Amount Changed",
               ""
           )
       )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delighted Trigger Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delighted_Trigger_Status__c</fullName>
        <formula>IF( 
    MOD(VALUE(Delighted_Index__c), 4)==0 &amp;&amp; ISPICKVAL(StageName, "CAP Sent")  &amp;&amp; RecordTypeId == "012E00000002OH1", "Offer Package Sent for HO",
    IF(
        MOD(VALUE(Delighted_Index__c), 4)==1 &amp;&amp; ISPICKVAL(StageName, "Offer Package Sent")  &amp;&amp; RecordTypeId == "012E00000002OHB", "CAP Sent for HB",
        IF( 
            MOD(VALUE(Delighted_Index__c), 4)==2 &amp;&amp; RSI_Sent__c &amp;&amp; RecordTypeId == "012E00000002OHB" , "RS1 Letter Sent to HO", 
            IF( 
                MOD(VALUE(Delighted_Index__c), 4)==3 &amp;&amp; Estimated_Funding_Amount_Changed__c, "Funding Amount Changed", 
                ""
            )
        ) 
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delighted Trigger Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Supply_Score__c</fullName>
        <description>A percentile rank (between 0-100) indicating the Greenlight scores of the Opportunity property, relative to the current portfolio. Higher values are more favorable. The metric being ranked is the average of the Demand and Supply scores. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <inlineHelpText>A percentile rank (between 0-100) indicating the Greenlight scores of the Opportunity property, relative to the current portfolio. Higher values are more favorable. The metric being ranked is the average of the Demand and Supply scores</inlineHelpText>
        <label>Greenlight Score Ranking</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocuSign_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DocuSign Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Out_Date__c</fullName>
        <description>Date/Time when Unison funds escrow account. Marker of "funded" for reporting</description>
        <label>Documents Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Down_Payment_Percent__c</fullName>
        <formula>Household_Down_Payment__c /  Final_OAV_Calculation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Household Down Payment / Final OAV</inlineHelpText>
        <label>Down Payment Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Effective_Finder_Contact_Date__c</fullName>
        <label>Effective Finder Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Contacts__c</fullName>
        <label>Emergency Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Encompass_GUID__c</fullName>
        <description>Encompass Unique Record ID</description>
        <inlineHelpText>Encompass Unique Record ID used for Integration</inlineHelpText>
        <label>Encompass GUID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encompass_Import_Status__c</fullName>
        <formula>IF(ISBLANK( Encompass_GUID__c ),"Not Imported","Imported")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Encompass Import Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encompass_Loan_Log__c</fullName>
        <label>Encompass Loan Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Encompass_Loan_Number__c</fullName>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Deal ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ending_the_Agreement_Date_Time__c</fullName>
        <label>Ending the Agreement Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ending_the_Agreement__c</fullName>
        <label>Ending the Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <label>Engagement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equity_less_than_origination__c</fullName>
        <formula>IF(Post_Close_LTV2_Converted__c &lt; OIP_Percentage__c,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equity less than origination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escrow_Case_Number__c</fullName>
        <label>Escrow Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow_Fee__c</fullName>
        <label>Escrow Fee</label>
        <summarizedField>OpportunityLineItem.Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Escrow Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Escrow_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escrow Officer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Escrow Officer)</relationshipLabel>
        <relationshipName>Opportunities_Escrow_Officer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Cash_to_Homeowner__c</fullName>
        <description>OIP -  Gross Transaction Fees - Waived Fees (if applicable) - Amount of Lien Paydown - 	
Sum of Debt to Be Paid Off</description>
        <formula>IF( Record_Type_Name__c = "HomeBuyer",  Estimated_Funding_Amount__c ,

(BLANKVALUE(Estimated_Funding_Amount__c, 0) - BLANKVALUE(Lien_Pay_Off_Sum__c, 0) - BLANKVALUE(Sum_of_Debt_to_be_Paid_Off__c, 0)- BLANKVALUE(Customer_Transaction_Fee__c, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OIP -  Gross Transaction Fees - Waived Fees (if applicable) - Amount of Lien Paydown - 	
Sum of Debt to Be Paid Off</inlineHelpText>
        <label>Net Cash to Partner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Funding_Amount_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <label>Estimated Funding Amount Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Funding_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is used to inform External Forecasting Reports. Do not change this field without first consulting Brodie Gay or Aditya Bhandari.</description>
        <inlineHelpText>Estimated Funding Amount</inlineHelpText>
        <label>OIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Investor_Backfill__c</fullName>
        <label>Estimated Investor Backfill</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Assignment_of_HO_Agreement_Multi__c</fullName>
        <description>Used in Nintex</description>
        <formula>CASE( Property_State__c , 
   
	"CO", 1,
        "CT", 1,
        "WI", 1,
	"DC", 1,
	"FL", 1,
	"GA", 1,
	"MA", 1,
	"MD", 1,
	"MI", 1,
        "NJ", 1,
	"NC", 1,
	"NY", 1,
	"PA", 1,
	"SC", 1,
	"VA", 1,
	"WA", 1, 0)=1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Assignment of HO Agreement Multi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Covenant_Agreement__c</fullName>
        <description>Used to identify which states do not require a multi-state Covenant of Agreements. Leveraged by DocGen and necessary for document generation.</description>
        <formula>CASE( Property_State__c,
 "CT", 1,
 "FL", 1,
  0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to identify which states do not require a multi-state Covenant of Agreements.</inlineHelpText>
        <label>Exclude Covenant Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Subordination_Agreement__c</fullName>
        <description>Used to identify which states do not require a multi-state Subordination Agreement. Leveraged by DocGen and necessary for document generation.</description>
        <formula>CASE( Property_State__c,
 "VA", 1,
 "WA", 1,
  0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to identify which states do not require a multi-state Subordination Agreement.</inlineHelpText>
        <label>Exclude Subordination Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Trust_Rider__c</fullName>
        <description>Nintex logic for HomeBuyer Trust Rider documents.</description>
        <formula>CASE( Property_State__c,
"OR", 1,
"WA", 1,
0
) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude Trust Rider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Back_End_DTI__c</fullName>
        <label>Back-End Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FICO__c</fullName>
        <description>This field is used to determine whether investor guidelines are broken. Do not change this field without first consulting Brodie or Abinhay Korukonda.</description>
        <inlineHelpText>Lower of the two scores between the Applicant Credit Score (Median) and Co-Applicant Score (Median).</inlineHelpText>
        <label>FICO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee_Waiver__c</fullName>
        <label>Fee Waiver</label>
        <summarizedField>OpportunityLineItem.Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Fee Waiver</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Fico_Lender__c</fullName>
        <label>Fico Lender</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Status__c</fullName>
        <label>File Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Amount__c</fullName>
        <formula>Transaction_Amount__c -  Total_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Transaction Amount - Total Fees</inlineHelpText>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counts the number of times a deal has been submitted for Approval. Used by the IMs in the Approval process.</description>
        <inlineHelpText>Counts the number of times a deal has been submitted for Approval.</inlineHelpText>
        <label>Final Approval Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Deal_Score__c</fullName>
        <description>Overall current deal score for the Opportunity. It is a score aggregated from sub-metrics that measure attractiveness of the property, ability of the homeowner to maintain the property, and complexity of the deal, relative to the current portfolio. Average of Concentration, Value, PD_score, Difficulty_Score, On a scale of 0-100. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <inlineHelpText>Overall current deal score for the Opportunity. It is a score aggregated from sub-metrics that measure attractiveness of the property, ability of the homeowner to maintain the property, and complexity of the deal, relative to the current portfolio.</inlineHelpText>
        <label>Current Deal Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>